// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser postfix unary expressions allows '++' at the end of a function 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "kind": "Block",
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Increment {
            "kind": "Increment",
            "token": Object {
              "isReserved": false,
              "kind": "PlusPlus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "++",
            },
            "type": "Increment",
            "value": Variable {
              "kind": "Variable",
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "someValue",
              },
              "type": "Variable",
            },
          },
        ],
        "type": "Block",
      },
      "end": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "kind": "Function",
      "parameters": Array [],
      "returns": 11,
      "type": "Function",
    },
    "kind": "NamedFunction",
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "type": "Function",
  },
]
`;

exports[`parser postfix unary expressions parses postfix '++' for indexed get expressions 1`] = `
Array [
  Increment {
    "kind": "Increment",
    "token": Object {
      "isReserved": false,
      "kind": "PlusPlus",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "++",
    },
    "type": "Increment",
    "value": IndexedGet {
      "closingSquare": Object {
        "isReserved": false,
        "kind": "RightSquare",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "]",
      },
      "index": Variable {
        "kind": "Variable",
        "name": Object {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "property",
        },
        "type": "Variable",
      },
      "kind": "IndexedGet",
      "obj": Variable {
        "kind": "Variable",
        "name": Object {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "obj",
        },
        "type": "Variable",
      },
      "type": "IndexedGet",
    },
  },
]
`;

exports[`parser postfix unary expressions parses postfix '++' for variables 1`] = `
Array [
  Increment {
    "kind": "Increment",
    "token": Object {
      "isReserved": false,
      "kind": "PlusPlus",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "++",
    },
    "type": "Increment",
    "value": Variable {
      "kind": "Variable",
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "foo",
      },
      "type": "Variable",
    },
  },
]
`;

exports[`parser postfix unary expressions parses postfix '--' for dotted get expressions 1`] = `
Array [
  Increment {
    "kind": "Increment",
    "token": Object {
      "isReserved": false,
      "kind": "MinusMinus",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "--",
    },
    "type": "Increment",
    "value": DottedGet {
      "kind": "DottedGet",
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "property",
      },
      "obj": Variable {
        "kind": "Variable",
        "name": Object {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "obj",
        },
        "type": "Variable",
      },
      "type": "DottedGet",
    },
  },
]
`;
